Add some changes due to frontend needs
