# src/main/java/com/restaurant/cart/controller/dto/CartDeliveredResponse.java
@@ -4,6 +4,6 @@ import java.util.List;
 
 public record CartDeliveredResponse(
         Double overallCartValue,
-        List<CartResponse> cartResponses
+        List<CartResponseDelivered> cartResponses
 ) {
 }
