# src/main/java/com/restaurant/cart/controller/dto/CartStatisticResponse.java
@@ -1,0 +1,9 @@
+package com.restaurant.cart.controller.dto;
+
+import java.util.List;
+
+public record CartStatisticResponse(
+        Double value,
+        List<SoldFoodSummaryResponse> soldFoodSummaries
+) {
+}
