# src/main/java/com/restaurant/cart/service/current/dto/SoldFoodSummary.java
@@ -1,0 +1,12 @@
+package com.restaurant.cart.service.current.dto;
+
+public record SoldFoodSummary(
+        String foodName,
+        Double price,
+        Integer quantitySold,
+        Double totalValue,
+        Long categoryId,
+        String categoryName,
+        Long positionId
+) {
+}
